go/chatxdk/include/chat_xdk.h

/**
 * Opaque handle to a Chat SDK instance.
 *
 * Created by [`chat_xdk_new`], freed by [`chat_xdk_free`].
 */
typedef struct ChatHandle ChatHandle;
/**
 * Opaque handle to an incremental stream decryptor.
 *
 * Created by [`chat_xdk_stream_decryptor_new`], freed by
 * [`chat_xdk_stream_decryptor_free`].
 */
typedef struct StreamDecryptorHandle StreamDecryptorHandle;
/**
 * Opaque handle to an incremental stream encryptor.
 *
 * Created by [`chat_xdk_stream_encryptor_new`], freed by
 * [`chat_xdk_stream_encryptor_free`].
 */
typedef struct StreamEncryptorHandle StreamEncryptorHandle;
/**
 * Result type returned by FFI functions.
 *
 * On success: `data` contains the result (may be NULL for void operations),
 *             `error` is NULL.
 * On error:   `data` is NULL, `error` contains the error message.
 *
 * Both fields must be freed with `chat_xdk_free_string` when non-NULL.
 */
typedef struct FfiResult {
  char *data;
  char *error;
} FfiResult;
/**
 * Enable or disable rejection of unverified events.
 *
 * When enabled — the default — `chat_xdk_decrypt_event` returns an error for
 * any signed event whose signature cannot be verified (invalid, missing, or
 * no matching signing key) instead of returning it with `verified: false`.
 */
void chat_xdk_set_reject_unverified(struct ChatHandle *handle, int32_t reject);
/**
 * Set the session identity: the owner's user id and signing-key version,
 * used as defaults wherever a params document leaves `sender_id` /
 * `signing_key_version` unset.
 */
struct FfiResult chat_xdk_set_identity(const struct ChatHandle *handle,
                                       const char *user_id,
                                       const char *signing_key_version);
/**
 * Enable (non-zero) or disable (0) the conversation-key cache (off by
 * default).
 *
 * While enabled, `chat_xdk_decrypt_events` caches each conversation's
 * verified latest key and the encrypt functions resolve an omitted
 * `conversation_key`/`conversation_key_version` pair from it. Disabling
 * clears the cache.
 */
void chat_xdk_set_cache_keys(const struct ChatHandle *handle, int32_t enabled);
/**
 * Store signing keys used when a decrypt call passes an empty
 * `signing_keys_json`.
 *
 * `signing_keys_json` takes the same array shape as
 * `chat_xdk_decrypt_events`. Each call replaces the previous set; only this
 * call populates the store — keys carried inside events are never trusted.
 */
struct FfiResult chat_xdk_set_signing_keys(const struct ChatHandle *handle,
                                           const char *signing_keys_json);
/**
 * `events_json`: JSON array of base64-encoded event strings.
 * Returns JSON `{"keys":{version: key_b64,...},"latest_version": string|null}`.
 */
struct FfiResult chat_xdk_extract_conversation_keys(const struct ChatHandle *handle,
                                                    const char *events_json);
/**
 * Prepare a signed conversation-key change.
 *
 * `params_json` — single JSON document: `public_keys`
 * (`[{"user_id","public_key","key_version"},...]`), plus optional
 * `sender_id` / `signing_key_version` (unset resolves from the session
 * identity) and `conversation_id` (absent or empty derives the one-to-one
 * id).
 */
struct FfiResult chat_xdk_prepare_conversation_key_change(const struct ChatHandle *handle,
                                                          const char *params_json);
/**
 * Prepare a signed group member-add change.
 *
 * `params_json` — single JSON document: `public_keys` (for the updated
 * roster), `conversation_id`, `new_member_ids`, `current_member_ids`,
 * `current_admin_ids`, `current_pending_member_ids`, plus optional
 * `sender_id` / `signing_key_version` (unset resolves from the session
 * identity), `current_title`, `current_avatar_url`, `current_ttl_msec`, and
 * `current_screen_capture_blocking_enabled` (an absent key means unset,
 * never false). Emits two action signatures.
 */
struct FfiResult chat_xdk_prepare_group_members_change(const struct ChatHandle *handle,
                                                       const char *params_json);
/**
 * Prepare a signed group create.
 *
 * `params_json` — single JSON document: `public_keys` (for the roster),
 * `conversation_id`, `member_ids`, `admin_ids`, plus optional `sender_id` /
 * `signing_key_version` (unset resolves from the session identity),
 * `title`, `avatar_url`, and `ttl_msec`. Emits two action signatures.
 */
struct FfiResult chat_xdk_prepare_group_create(const struct ChatHandle *handle,
                                               const char *params_json);
/**
 * Decrypt a webhook event.
 *
 * `event_b64`: Base64-encoded event from webhook.
 * `conversation_keys_json`: JSON object mapping version strings to base64-encoded
 *     raw conversation key bytes, from `extract_conversation_keys`. With "{}"
 *     the opt-in conversation-key cache (see `chat_xdk_set_cache_keys`) is
 *     consulted instead; pass "{}" for non-message events.
 * `signing_keys_json`: JSON array of `{"user_id","public_key_version","public_key",
 *     "identity_public_key","identity_public_key_signature"}`. An empty array
 *     falls back to the keys stored via `chat_xdk_set_signing_keys`; with
 *     nothing stored either, signed events fail decryption under the default
 *     reject-unverified policy (disable it via `chat_xdk_set_reject_unverified`
 *     to have them returned with `verified: false` instead).
 *
 * Returns JSON representation of the decrypted Event.
 */
struct FfiResult chat_xdk_decrypt_event(const struct ChatHandle *handle,
                                        const char *event_b64,
                                        const char *conversation_keys_json,
                                        const char *signing_keys_json);
/**
 * Encrypt a message for the X API.
 *
 * `params_json` — single JSON document: `conversation_id`, `text`, plus
 * optional `sender_id` / `signing_key_version` (unset resolves from the
 * session identity), `conversation_key` (base64 raw 32-byte key) /
 * `conversation_key_version` (unset resolves from the opt-in key cache),
 * `entities` (`[[start,end,"type"],...]`), `attachments`
 * (`[{"attachment_type",...},...]`), `should_notify`, and `ttl_msec`.
 *
 * Returns JSON `SendPayload`; the SDK-generated `message_id` is a field on it.
 */
struct FfiResult chat_xdk_encrypt_message(const struct ChatHandle *handle, const char *params_json);
/**
 * Encrypt a reply message for the X API.
 *
 * `params_json` — same document as `chat_xdk_encrypt_message` plus the
 * reply target: preferably `reply_to_event` (base64 raw signed event being
 * replied to; the preview is derived from it), with optional
 * `reply_to_edit_event` and `reply_to_ckces` (base64 raw key-change events
 * needed when the original used a different key version). The explicit
 * `reply_to_sequence_id`, `reply_to_sender_id`, `reply_to_text`,
 * `reply_to_entities`, and `reply_to_attachments` overrides remain for
 * callers that no longer hold the raw event.
 *
 * Returns JSON `SendPayload`; the SDK-generated `message_id` is a field on it.
 */
struct FfiResult chat_xdk_encrypt_reply(const struct ChatHandle *handle, const char *params_json);
/**
 * Encrypt a reaction-add for the X API.
 *
 * `params_json` — single JSON document: `emoji` plus the reaction target:
 * preferably `target_event` (base64 raw event being reacted to; the
 * conversation id and target sequence id are derived from it), with
 * explicit `conversation_id` / `target_message_sequence_id` overrides for
 * callers that no longer hold the raw event. Optional `sender_id` /
 * `signing_key_version` (unset resolves from the session identity) and
 * `conversation_key` (base64) / `conversation_key_version` (unset resolves
 * from the opt-in key cache).
 *
 * Returns JSON `SendPayload`; the SDK-generated `message_id` is a field on it.
 */
struct FfiResult chat_xdk_encrypt_add_reaction(const struct ChatHandle *handle,
                                               const char *params_json);
/**
 * Encrypt a reaction-remove for the X API.
 *
 * Same parameters as `chat_xdk_encrypt_add_reaction`.
 */
struct FfiResult chat_xdk_encrypt_remove_reaction(const struct ChatHandle *handle,
                                                  const char *params_json);
/**
 * Decrypt an encrypted conversation key.
 *
 * Returns base64-encoded decrypted conversation key.
 */
struct FfiResult chat_xdk_decrypt_conversation_key(const struct ChatHandle *handle,
                                                   const char *encrypted_key_b64);
/**
 * Encrypt a UTF-8 plaintext string; returns base64 ciphertext (XSalsa20-Poly1305).
 */
struct FfiResult chat_xdk_encrypt(const struct ChatHandle *handle,
                                  const char *plaintext,
                                  const char *conversation_key_b64);
/**
 * Decrypt base64 ciphertext to UTF-8 plaintext (metadata fields, same wire as message content).
 */
struct FfiResult chat_xdk_decrypt(const struct ChatHandle *handle,
                                  const char *ciphertext_b64,
                                  const char *conversation_key_b64);
/**
 * Decrypt a streaming-encrypted payload.
 *
 * Returns base64-encoded decrypted bytes.
 */
struct FfiResult chat_xdk_decrypt_stream(const struct ChatHandle *handle,
                                         const char *encrypted_b64,
                                         const char *conversation_key_b64);
/**
 * Encrypt a stream (e.g., media) with a conversation key. Returns base64.
 */
struct FfiResult chat_xdk_encrypt_stream(const struct ChatHandle *handle,
                                         const char *plaintext_b64,
                                         const char *conversation_key_b64);
/**
 * Create a stream encryptor for a base64 conversation key. Returns NULL on a
 * bad key; free the handle with [`chat_xdk_stream_encryptor_free`].
 */
struct StreamEncryptorHandle *chat_xdk_stream_encryptor_new(const char *conversation_key_b64);
/**
 * Encrypt a base64 plaintext chunk; returns base64 ciphertext available so far.
 */
struct FfiResult chat_xdk_stream_encryptor_push(struct StreamEncryptorHandle *handle,
                                                const char *plaintext_b64);
/**
 * Emit the final frame as base64. The handle must still be freed afterwards.
 */
struct FfiResult chat_xdk_stream_encryptor_finish(struct StreamEncryptorHandle *handle);
/**
 * Free a stream encryptor handle.
 */
void chat_xdk_stream_encryptor_free(struct StreamEncryptorHandle *handle);
/**
 * Create a stream decryptor for a base64 conversation key. Returns NULL on a
 * bad key; free the handle with [`chat_xdk_stream_decryptor_free`].
 */
struct StreamDecryptorHandle *chat_xdk_stream_decryptor_new(const char *conversation_key_b64);
/**
 * Free a stream decryptor handle.
 */
void chat_xdk_stream_decryptor_free(struct StreamDecryptorHandle *handle);