crates/dotnet/dotnet/ChatXdk/NativeMethods.g.cs


        /// <summary>
        ///  Prepare a signed conversation-key change.
        ///
        ///  `params_json` — single JSON document: `public_keys`
        ///  (`[{"user_id","public_key","key_version"},...]`), plus optional
        ///  `sender_id` / `signing_key_version` (absent resolves from the session
        ///  identity set via `chat_xdk_set_identity`) and optional `conversation_id`
        ///  (absent or empty derives the one-to-one id).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_prepare_conversation_key_change", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_prepare_conversation_key_change(ChatHandle* handle, byte* params_json);

        /// <summary>
        ///  Prepare a signed group member-add change.
        ///
        ///  `params_json` — single JSON document: `public_keys` (for the updated
        ///  roster), `conversation_id`, `new_member_ids`, `current_member_ids`,
        ///  `current_admin_ids`, `current_pending_member_ids`, plus optional
        ///  `sender_id` / `signing_key_version` (absent resolves from the session
        ///  identity), `current_title`, `current_avatar_url`, `current_ttl_msec`, and
        ///  `current_screen_capture_blocking_enabled` (an absent key means unset,
        ///  never false). Emits two action signatures.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_prepare_group_members_change", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_prepare_group_members_change(ChatHandle* handle, byte* params_json);

        /// <summary>
        ///  Prepare a signed group create.
        ///
        ///  `params_json` — single JSON document: `public_keys` (for the roster),
        ///  `conversation_id`, `member_ids`, `admin_ids`, plus optional `sender_id` /
        ///  `signing_key_version` (absent resolves from the session identity),
        ///  `title`, `avatar_url`, and `ttl_msec`. Emits two action signatures.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_prepare_group_create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_prepare_group_create(ChatHandle* handle, byte* params_json);

        /// <summary>
        ///  Decrypt a webhook event.
        ///
        ///  - `event_b64` — base64-encoded raw event from the webhook.
        ///  - `conversation_keys_json` — JSON object `{"version": "base64_key"}` from
        ///    `chat_xdk_extract_conversation_keys`. Pass `"{}"` for non-message events
        ///    or to fall back to the opt-in key cache (`chat_xdk_set_cache_keys`).
        ///  - `signing_keys_json` — JSON array `[{"user_id","public_key_version","public_key",
        ///    "identity_public_key","identity_public_key_signature"},...]` for the sender.
        ///    The SDK selects the matching version automatically. An empty array falls
        ///    back to the keys stored via `chat_xdk_set_signing_keys`; if none are
        ///    stored either, signed events fail decryption under the default
        ///    reject-unverified policy (disable it via `chat_xdk_set_reject_unverified`
        ///    to have them returned with `verified: false` instead).
        ///
        ///  Returns a JSON representation of the decrypted `Event`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_decrypt_event", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_decrypt_event(ChatHandle* handle, byte* event_b64, byte* conversation_keys_json, byte* signing_keys_json);

        /// <summary>
        ///  Encrypt a message for the X API.
        ///
        ///  `params_json` — single JSON document: `conversation_id` and `text`, plus
        ///  optional overrides `sender_id` / `signing_key_version` (absent resolves
        ///  from the session identity) and `conversation_key` (base64 raw 32-byte
        ///  key) / `conversation_key_version` (absent resolves from the opt-in key
        ///  cache), plus optional `entities` (`[[start,end,"type"],...]`),
        ///  `attachments` (`[{"attachment_type",...},...]`), `should_notify`, and
        ///  `ttl_msec`.
        ///
        ///  Returns JSON `SendPayload`; the SDK-generated `message_id` is a field on it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_encrypt_message", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_encrypt_message(ChatHandle* handle, byte* params_json);

        /// <summary>
        ///  Encrypt a reply message for the X API.
        ///
        ///  `params_json` — same document as `chat_xdk_encrypt_message` plus
        ///  `reply_to_event` (base64 raw signed event being replied to; the reply
        ///  preview is derived from it) with optional `reply_to_edit_event` and
        ///  `reply_to_ckces` (base64 raw key-change events needed to decrypt the
        ///  original under an older key version). The explicit-preview overrides
        ///  `reply_to_sequence_id`, `reply_to_sender_id`, `reply_to_text`,
        ///  `reply_to_entities`, and `reply_to_attachments` remain for callers that no
        ///  longer hold the raw event.
        ///
        ///  Returns JSON `SendPayload`; the SDK-generated `message_id` is a field on it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_encrypt_reply", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_encrypt_reply(ChatHandle* handle, byte* params_json);

        /// <summary>
        ///  Encrypt a reaction-add for the X API.
        ///
        ///  `params_json` — single JSON document: `emoji` and `target_event` (base64
        ///  raw event being reacted to; the conversation id and target sequence id are
        ///  derived from it), plus optional explicit overrides `conversation_id` /
        ///  `target_message_sequence_id` for callers that no longer hold the raw
        ///  event, and the optional identity/key overrides described on
        ///  `chat_xdk_encrypt_message`.
        ///
        ///  Returns JSON `SendPayload`; the SDK-generated `message_id` is a field on it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_encrypt_add_reaction", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_encrypt_add_reaction(ChatHandle* handle, byte* params_json);

        /// <summary>
        ///  Encrypt a reaction-remove for the X API.
        ///
        ///  Same parameters as `chat_xdk_encrypt_add_reaction`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_encrypt_remove_reaction", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_encrypt_remove_reaction(ChatHandle* handle, byte* params_json);

        /// <summary>
        ///  Decrypt an ECIES-encrypted conversation key.
        ///
        ///  `encrypted_key_b64` — base64-encoded encrypted key from a `KeyChange` event.
        ///
        ///  Returns a base64-encoded raw 32-byte conversation key.
        ///  Call this once per key version; reuse the result for all subsequent operations.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_decrypt_conversation_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_decrypt_conversation_key(ChatHandle* handle, byte* encrypted_key_b64);

        /// <summary>
        ///  Encrypt a UTF-8 plaintext string; returns base64 ciphertext (XSalsa20-Poly1305).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_encrypt", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_encrypt(ChatHandle* handle, byte* plaintext, byte* conversation_key_b64);

        /// <summary>
        ///  Decrypt base64 ciphertext to UTF-8 plaintext (metadata fields).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_decrypt", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_decrypt(ChatHandle* handle, byte* ciphertext_b64, byte* conversation_key_b64);

        /// <summary>
        ///  Decrypt a streaming-encrypted payload (e.g. media files).
        ///
        ///  Both arguments are base64-encoded.
        ///  Returns base64-encoded decrypted bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_decrypt_stream", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_decrypt_stream(ChatHandle* handle, byte* encrypted_b64, byte* conversation_key_b64);

        /// <summary>
        ///  Encrypt a stream (e.g. media files) with a conversation key.
        ///
        ///  Both arguments are base64-encoded.
        ///  Returns base64-encoded encrypted bytes.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_encrypt_stream", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_encrypt_stream(ChatHandle* handle, byte* plaintext_b64, byte* conversation_key_b64);

        /// <summary>
        ///  Create a stream encryptor for a base64 conversation key. Returns NULL on a
        ///  bad key; free the handle with `chat_xdk_stream_encryptor_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_encryptor_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern StreamEncryptorHandle* chat_xdk_stream_encryptor_new(byte* conversation_key_b64);

        /// <summary>
        ///  Encrypt a base64 plaintext chunk; returns base64 ciphertext available so far.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_encryptor_push", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_stream_encryptor_push(StreamEncryptorHandle* handle, byte* plaintext_b64);

        /// <summary>
        ///  Emit the final frame as base64. The handle must still be freed afterwards.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_encryptor_finish", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern FfiResult chat_xdk_stream_encryptor_finish(StreamEncryptorHandle* handle);

        /// <summary>
        ///  Free a stream encryptor handle.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_encryptor_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void chat_xdk_stream_encryptor_free(StreamEncryptorHandle* handle);

        /// <summary>
        ///  Create a stream decryptor for a base64 conversation key. Returns NULL on a
        ///  bad key; free the handle with `chat_xdk_stream_decryptor_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "chat_xdk_stream_decryptor_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern StreamDecryptorHandle* chat_xdk_stream_decryptor_new(byte* conversation_key_b64);
